[package]
name = "spot_deez_yt_parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features =["json", "blocking"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full"] } 
wildmatch = "2.1.1"

[profile.release]
strip = true
opt-level = "z"
lto = true
